# tixtalk

./: .env.example  .env.local  .gitignore  PreTalxTixAzure.csproj  Program.cs  Pulumi.dev.yaml  Pulumi.yaml  README.md  SECURITY.md  docker-compose.cloudflare.yml  docker-compose.local.yml  docker-compose.yml  manage.sh  nfpm.yaml
.github/: copilot-instructions.md
Helpers/: NamingConventions.cs  SecretGenerator.cs
Infrastructure/: ContainerAppsEnvironmentStack.cs  PostgreSqlStack.cs  PretalxContainerApp.cs  PretixContainerApp.cs  RedisContainerApp.cs  ResourceGroupStack.cs  StorageStack.cs
Scripts/: BackupDb.ps1  Deploy.ps1  InitApps.ps1  Update.ps1
caddy/: Caddyfile  Caddyfile.dns  Caddyfile.local  Dockerfile
cli/: AzureCli.cs  Config.cs  Dev.cs  Menu.cs  Program.cs  Provision.cs  Remote.cs  SshAccess.cs  Teardown.cs  TixTalk.Cli.csproj
infra/: PreTalxTix.Infra.csproj  Program.cs  Pulumi.dev.yaml  Pulumi.yaml  TixTalk.Infra.csproj
plugins/: README.md  install-plugins.sh
plugins/meettomatch-client/: pyproject.toml
plugins/meettomatch-client/meettomatch/: __init__.py  client.py  exceptions.py  models.py
plugins/pretalx-meettomatch/: pyproject.toml
plugins/pretalx-meettomatch/pretalx_meettomatch/: __init__.py  signal_handlers.py  sync.py
plugins/pretalx-meettomatch/pretalx_meettomatch/management/commands/: mtm_sync.py
plugins/pretix-meettomatch/: pyproject.toml
plugins/pretix-meettomatch/pretix_meettomatch/: __init__.py  client_factory.py  logic.py  settings.py  signals.py  tasks.py
scripts/: backup.sh  cloudflare-dns.sh  cron.sh  deploy.sh  (+4 more)
(+10 files in other folders)
